--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     container_name: visualizer-arm
     ports:
       - "8080:8080/tcp"
+    volumes:
+       - '/var/run/docker.sock:/var/run/docker.sock'
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
