--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,7 +71,7 @@ services:
       - /home/pi/config/config/deluge:/config
       - /home/pi/completedTorrents:/downloads
   readarr:
-    image: linuxserver/readarr:nightly-version-0.1.0.974
+    image: linuxserver/readarr:nightly
     restart: always
     container_name: readarr
     environment:
