--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -7,8 +7,6 @@ services:
     ports: 
       - "2202:2202"
       - "2203:2203"
-    environment:
-      TZ: 'America/Bogota'
     volumes:
       - /home/pi/config/:/config
       - /home/pi/Books/:/books
@@ -16,3 +14,4 @@ services:
       - TZ=America/Bogota
       - PUID=1000
       - PGID=1000
+      - MAXMEM=1024
