--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -35,7 +35,11 @@ services:
       - PGID=1000
       - TZ=America/Bogota
       - URL=jono-ubooquity.duckdns.org:2202
-      - VALIDATION=http
+      - SUBDOMAINS=wildcard
+      - VALIDATION=duckdns
+      - DUCKDNSTOKEN=token
+    volumes:
+      - /home/pi/swag:/config
     ports:
       - 443:443
     restart: unless-stopped
