added vpn subdomain

--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Bogota
-      - SUBDOMAINS=jono-calibre
+      - SUBDOMAINS=jono-calibre,jono-vpn
       - TOKEN=token
     restart: unless-stopped
   swag:
