--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     ports:
       - 443:443
       - 80:80
-    restart: unless-stopped
+    restart: always
   wordpress:
     image: wordpress
     restart: always
