--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     restart: unless-stopped
   uptime-kuma:
     image: louislam/uptime-kuma
-    container_name: duckdns
+    container_name: uptime-kuma
     ports:
       - 3001:3001 
     restart: always
