added volume to kuma

--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
     ports:
       - 3001:3001 
     restart: always
+  volumes:
+      - /home/pi/config/config/uptime-kuma:/app/data
   rclone-uptime-kuma:
     image: rclone/rclone
     restart: on-failure
