--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - TZ=America/Bogota
       - VIRTUAL_HOST="pi.hole"
       - PROXY_LOCATION="pi.hole"
+      - FTLCONF_LOCAL_IPV4="127.0.0.1"
     restart: unless-stopped
     ports:
       - "53:53"
