--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -57,5 +57,5 @@ services:
     ports:
       - 82:80
     environment:
-      VIKUNJA_API_URL: http://<your-ip-here>:3456/api/v1
+      VIKUNJA_API_URL: http://nico:3456/api/v1
     restart: unless-stopped
