--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -25,22 +25,19 @@ services:
       - /home/pi/config/config/heimdall/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/heimdall"]
   db:
-    image: mariadb:10
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    image: postgres:13
     environment:
-      MYSQL_ROOT_PASSWORD: supersecret
-      MYSQL_USER: vikunja
-      MYSQL_PASSWORD: secret
-      MYSQL_DATABASE: vikunja
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: vikunja
     volumes:
-      - ./db:/var/lib/mysql
-    restart: unless-stopped
+      - ./db:/var/lib/postgresql/data
+  restart: unless-stopped
   api:
     image: vikunja/api
     environment:
       VIKUNJA_DATABASE_HOST: db
       VIKUNJA_DATABASE_PASSWORD: secret
-      VIKUNJA_DATABASE_TYPE: mysql
+      VIKUNJA_DATABASE_TYPE: postgres
       VIKUNJA_DATABASE_USER: vikunja
       VIKUNJA_DATABASE_DATABASE: vikunja
       VIKUNJA_SERVICE_JWTSECRET: <a super secure random secret>
