--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -82,3 +82,15 @@ services:
       - /home/pi/config/config/rclone:/config
       - ./files:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/vikunja/api"]
+  rclone-pihole:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-pihole
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/pihole-backup/:/mnt/config
+    command: ["copy","/mnt/config","jonomega:/Backup/rclone/pihole1"]
