--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.3"
 services:
-  pihole:
+  heimdall:
     image: linuxserver/heimdall:latest
     container_name: heimdall
     environment:
