--- a/yiya/prometheus.yaml
+++ b/yiya/prometheus.yaml
@@ -1,5 +1,5 @@
 scrape_configs:
-  - job_name: 'homeassistant'
+  - job_name: 'wendy'
     metrics_path: /api/prometheus
     scrape_interval: 60s
     static_configs:
