--- a/yiya/prometheus.yaml
+++ b/yiya/prometheus.yaml
@@ -7,3 +7,9 @@ scrape_configs:
     scheme: http
     authorization:
       credentials: "myaccesstoken"
+  - job_name: 'donna'
+    metrics_path: /api/prometheus
+    scrape_interval: 60s
+    static_configs:
+      - targets: ['donna:9100']
+    scheme: http
